# swiftreader

./: .releaserc.json  Cargo.toml  README.md  RELEASE.md
.github/workflows/: release.yml
src/: lib.rs
