[package]
name = "swiftreader"
version = "0.1.0"
edition = "2021"
description = "A bionic reading converter into epub, pdf and text"
license = "MIT"
repository = "https://github.com/fadumoaideed/swiftreader"
documentation = "https://docs.rs/swiftreader"
homepage = "https://github.com/fadumoaideed/swiftreader"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node"
]}